--- a/src/Scss/Liabrary/_singleProduct.scss
+++ b/src/Scss/Liabrary/_singleProduct.scss
@@ -213,24 +213,17 @@
             display: none;
         }
 
-        // .color .add-sub {
-        //     text-align: center;
-
-        // }
-
-        // button .cart-add {
-        //     place-items: center;
-        // }
+        
     }
 
-    // .main h6,
-    // // h3 {
-    // //     text-align: center;
-    // // }
+    .main{
+        padding: 20px;
+    }
 
     .full-image {
         p {
             display: block;
         }
     }
+    
 }
