--- a/src/Scss/index.scss
+++ b/src/Scss/index.scss
@@ -12,4 +12,7 @@
 @import './Liabrary/logo';
 @import './Liabrary/var';
 // @import './Liabrary/pagination';
-@import './Liabrary/cart'
+@import './Liabrary/cart';
+*{
+    font-family: 'Mulish', sans-serif;
+}
