--- a/src/Scss/Liabrary/_navbar.scss
+++ b/src/Scss/Liabrary/_navbar.scss
@@ -14,6 +14,9 @@ nav {
         display: flex;
 
     }
+    .toggle{
+        display:none;
+    }
 
     ul {
         list-style-type: none;
@@ -80,41 +83,6 @@ nav {
         display: none;
     }
 
-    // .hamburger:hover {
-    //     background-color: #2642af;
-    // }
-
-    @media (min-width: 32rem) and (max-width: 76.7rem) {
-        .hamburger {
-            display: block;
-
-        }
-
-        .logo {
-            padding-left: 9.6rem;
-        }
-
-        .main-menu {
-            display: none
-        }
-
-        .sign-in {
-            float: right;
-            display: contents;
-
-            li {
-                padding-right: 1.2rem;
-            }
-
-            span {
-                display: none;
-            }
-
-            .Signin {
-                display: none;
-            }
-        }
-    }
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -128,13 +96,32 @@ nav {
         }
        
     }
+   
+        nav ul{
+            
+            li{
+                padding-left: 2rem;
+            }
+        }
+       
+    
 }
 
-// @media screen and (max-width: 768rem) {
-//     .hamburger {
-//       display: block;
-//     }
-//     ul{
-//         display: none;
-//     }
-//   }
+@media (min-width: 320px) and (max-width: 767px) {
+    nav .toggle{
+        display: block;
+    }
+    
+    .sign-in ul li{
+        span{display: none;}
+       
+
+    }
+    nav ul li .img-2 {
+        display:none !important
+    }
+    .main-menu{
+        display:none
+    }
+
+  }
