--- a/src/Scss/index.css
+++ b/src/Scss/index.css
@@ -5755,6 +5755,9 @@ nav {
 nav .logo-align {
   display: flex;
 }
+nav .toggle {
+  display: none;
+}
 nav ul {
   list-style-type: none;
   text-align: right;
@@ -5808,36 +5811,33 @@ nav .hamburger {
   transform: translateY(-50%);
   display: none;
 }
-@media (min-width: 32rem) and (max-width: 76.7rem) {
-  nav .hamburger {
-    display: block;
-  }
-  nav .logo {
-    padding-left: 9.6rem;
-  }
-  nav .main-menu {
-    display: none;
-  }
-  nav .sign-in {
-    float: right;
-    display: contents;
-  }
-  nav .sign-in li {
-    padding-right: 1.2rem;
-  }
-  nav .sign-in span {
-    display: none;
-  }
-  nav .sign-in .Signin {
-    display: none;
-  }
-}
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .sign-in span {
     display: none;
   }
   .sign-in .img-2 {
+    display: none;
+  }
+
+  nav ul li {
+    padding-left: 2rem;
+  }
+}
+@media (min-width: 320px) and (max-width: 767px) {
+  nav .toggle {
+    display: block;
+  }
+
+  .sign-in ul li span {
+    display: none;
+  }
+
+  nav ul li .img-2 {
+    display: none !important;
+  }
+
+  .main-menu {
     display: none;
   }
 }
@@ -6062,6 +6062,10 @@ nav .hamburger {
 @media (min-width: 320px) and (max-width: 767px) {
   .detail-info .catogatry {
     display: none;
+  }
+
+  .main {
+    padding: 20px;
   }
 
   .full-image p {
@@ -6365,7 +6369,7 @@ nav .hamburger {
   border: none;
 }
 
-@media (max-width: 76.8rem) {
+@media (min-width: 320px) and (max-width: 767px) {
   .subheader {
     visibility: visible;
   }
@@ -6452,17 +6456,12 @@ nav .hamburger {
   color: #172026;
   padding: 2.4rem;
 }
-.cart-Container .shipping p:not(:nth-child(3n)) {
-  border-bottom: 1rem solid #D1D3D6;
-}
 .cart-Container .shipping p span {
   float: right;
   font: normal normal normal 1.4rem/2.1rem Muli;
 }
-.cart-Container .shipping p span img {
-  width: 1rem;
-  height: 1rem;
-  margin-left: 0.5rem;
+.cart-Container .shipping img {
+  padding-top: 2.5rem;
 }
 .cart-Container .btn {
   padding-top: 5.5rem;
@@ -6532,4 +6531,27 @@ nav .hamburger {
 }
 .cart-Container .pricing-total .ppbtn {
   padding: 1rem;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .cart-Container .btn {
+    padding-top: 0;
+  }
+
+  .cart-Container .pricing-total {
+    border: none;
+  }
+
+  .cart-Container .shipping p span {
+    float: left;
+    padding-top: 0;
+    padding-bottom: 0.5rem;
+  }
+
+  .cart-Container .shipping p {
+    padding: 1.4rem;
+  }
+}
+* {
+  font-family: "Mulish", sans-serif;
 }/*# sourceMappingURL=index.css.map */
