--- a/src/Scss/Liabrary/_cart.scss
+++ b/src/Scss/Liabrary/_cart.scss
@@ -24,7 +24,7 @@
             display: flex;
 
             img {
-                width: auto;
+                width: 12vw;
                 height: 19.9rem;
                 border: .1rem solid $col-Gray;
             }
@@ -38,13 +38,13 @@
 
             b {
                 text-align: left;
-                font: normal normal 600 2rem/2.5rem Muli;
+                font: normal normal 600 2rem/2.5rem Mulish;
                 letter-spacing: 0px;
                 color: $col-black;
             }
 
             p {
-                font: normal normal normal 1.6rem/2.4rem Muli;
+                font: normal normal normal 1.6rem/2.4rem Mulish;
                 letter-spacing: 0px;
                 color: $col-black;
 
@@ -54,14 +54,14 @@
 
     .shipping {
         border: 1px solid $col-Gray;
-        
+       
         p {
             text-align: left;
             // &:not(:nth-child(3n)) {
             //     border-bottom: .1rem solid $col-Gray;
             // }
            
-            font: normal normal normal 2rem/2.5rem Muli;
+            font: normal normal normal 2rem/2.5rem Mulish;
             letter-spacing: 0px;
             color: $col-black;
             padding: 2.4rem;
@@ -69,7 +69,7 @@
 
             span  {
                 float: right;
-                font: normal normal normal 1.4rem/2.1rem Muli;
+                font: normal normal normal 1.4rem/2.1rem Mulish;
                 
                
             }
@@ -110,7 +110,7 @@
 
 
     .option {
-        font: normal normal 600 1.2rem/1.4rem Muli;
+        font: normal normal 600 1.2rem/1.4rem Mulish;
         letter-spacing: 0px;
         color: $col-black;
         padding: .3rem 1rem;
@@ -139,12 +139,12 @@
             padding-top: 3.2rem;
             padding-bottom: 2.4rem;
             text-align: left;
-            font: normal normal 600 2rem/2.5rem Muli;
+            font: normal normal 600 2rem/2.5rem Mulish;
         }
 
         p {
             padding-bottom: 16px;
-            font: normal normal normal 1.6rem/2.4rem Muli;
+            font: normal normal normal 1.6rem/2.4rem Mulish;
             letter-spacing: 0px;
             color: $col-black;
             text-align: left;
@@ -155,7 +155,7 @@
         }
 
         .Primary-brand {
-            font: normal normal bold 1.4rem/1.6rem Muli;
+            font: normal normal bold 1.4rem/1.6rem Mulish;
             letter-spacing: 0px;
             color: $col-white;
             text-transform: uppercase;
