--- a/src/Scss/Liabrary/_footer.scss
+++ b/src/Scss/Liabrary/_footer.scss
@@ -67,7 +67,7 @@
 
     .info {
         text-align: center;
-        font-style: normal normal normal 1.4rem/1.8rem Muli;
+        font-style: normal normal normal 1.4rem/1.8rem Mulish;
         letter-spacing: 0rem;
         color: $gray-3;
     }
