--- a/src/Scss/Liabrary/_heroBanner.scss
+++ b/src/Scss/Liabrary/_heroBanner.scss
@@ -11,7 +11,8 @@
     flex-direction: column;
     height:30rem;
 
-   h1{ font: normal normal 600 3.6rem/4.2rem Source Serif Pro;}
+   h1{ 
+       font: normal normal 600 3.6rem/4.2rem Source Serif Pro;}
 
 }
 
