--- a/src/Scss/Liabrary/_sideNav.scss
+++ b/src/Scss/Liabrary/_sideNav.scss
@@ -6,19 +6,23 @@
     padding-right: 3.7rem;
 
     p {
-        font: normal normal normal 1.6rem/2.4rem Muli;
+        font: normal normal normal 1.6rem/2.4rem Mulish;
     }
 
 
     h6 {
-        font: normal normal normal 2rem/1.4rem Muli;
+        font: normal normal normal 2rem/1.4rem Mulish;
 
         color: $col-dark-gray;
         padding-top: 1.5rem;
-        padding-bottom: 1.7rem;
+        padding-bottom: 2.7rem;
 
-        a {
+        p {
             text-decoration: underline;
+            font: normal normal 600 1.4rem/2.4rem Mulish;
+            letter-spacing: 0px;
+            color: $col-dark-gray;
+            
 
         }
 
@@ -35,7 +39,7 @@
 
     label {
         font-size: 1.6rem;
-
+        padding-bottom:2.4rem ;
         span {
             padding: .5rem;
         }
