--- a/src/Scss/Liabrary/_navbar.scss
+++ b/src/Scss/Liabrary/_navbar.scss
@@ -29,7 +29,7 @@ nav {
         padding-left: 3.2rem;
         padding-top: 1.4rem;
         height: 2rem;
-        font-style: normal normal 600 1.6rem/2.4rem Muli;
+        font-style: normal normal 600 1.6rem/2.4rem Mulish;
         font-size: 1.6rem;
         font-weight: 600;
         letter-spacing: 0rem;
@@ -38,6 +38,8 @@ nav {
 
         a {
             text-align: right;
+            text-decoration: none;
+            color: $black-2;
         }
 
         .img-1 {
