--- a/src/Scss/Liabrary/_singleProduct.scss
+++ b/src/Scss/Liabrary/_singleProduct.scss
@@ -2,7 +2,7 @@
     padding: 3.3rem 10rem 3rem 10rem;
    p{
     text-align: left;
-    font: normal normal normal 1.6rem/2.4rem Muli;
+    font: normal normal normal 1.6rem/2.4rem Mulish;
     letter-spacing: 0px;
     color: $col-black;
     padding-right: 1rem;
@@ -30,7 +30,7 @@
     p {
         display: none;
         text-align: left;
-        font: normal normal normal 1.6rem/2.4rem Muli;
+        font: normal normal normal 1.6rem/2.4rem Mulish;
         letter-spacing: 0px;
         color: $col-black;
     }
@@ -39,6 +39,7 @@
         width: 100%;
         height: 68rem;
         padding-right: 3.3rem;
+       
     }
 
 }
@@ -111,7 +112,7 @@
                 border: .2rem solid $border-gray;
                 border-radius: .6rem;
                 text-align: center;
-                font: normal normal 600 1.6rem/2rem Muli;
+                font: normal normal 600 1.6rem/2rem Mulish;
                 letter-spacing: 0.32px;
                 color: $gray-3;
             }
@@ -124,7 +125,7 @@
 
         h6 {
             padding: 1.6rem 0;
-            font: normal normal 600 2rem/3rem Muli;
+            font: normal normal 600 2rem/3rem Mulish;
             letter-spacing: 0rem;
             color: $col-black;
         }
@@ -155,7 +156,7 @@
             padding-left: 7.8rem;
             padding-top: 2.4rem;
             letter-spacing: 0.32px;
-            font: normal normal 600 1.6rem/2rem Muli;
+            font: normal normal 600 1.6rem/2rem Mulish;
 
             .heart img {
                 width: 1.8rem;
@@ -179,14 +180,14 @@
     text-align: left;
 
     p {
-        font: normal normal normal 1.6rem/2.4rem Muli;
+        font: normal normal normal 1.6rem/2.4rem Mulish;
         letter-spacing: 0rem;
         color: $col-black;
     }
 
     ul li {
         list-style-type: none;
-        font: normal normal 600 1.6rem Muli;
+        font: normal normal 600 1.6rem Mulish;
         letter-spacing: 0rem;
         color: $col-black;
     }
@@ -199,7 +200,7 @@
     }
 
     h6 {
-        font: normal normal 600 2rem/2.5rem Muli;
+        font: normal normal 600 2rem/2.5rem Mulish;
         letter-spacing: 0rem;
         color: $col-black;
         padding-top: 2.4rem;
