--- a/src/Scss/Liabrary/_cart.scss
+++ b/src/Scss/Liabrary/_cart.scss
@@ -1,6 +1,13 @@
 .cart-Container {
     padding: 1rem;
 
+    .carousal {
+        font: normal normal 600 4.8rem/6rem Source Serif Pro;
+        letter-spacing: 0px;
+        color: $col-black;
+        padding: 2rem;
+    }
+
     h1 {
         font: normal normal 600 4.8rem/4.5rem Source Serif Pro;
         letter-spacing: 0px;
@@ -24,7 +31,7 @@
             display: flex;
 
             img {
-                width: 12vw;
+                width: 13vw;
                 height: 19.9rem;
                 border: .1rem solid $col-Gray;
             }
@@ -54,39 +61,40 @@
 
     .shipping {
         border: 1px solid $col-Gray;
-       
+
         p {
             text-align: left;
             // &:not(:nth-child(3n)) {
             //     border-bottom: .1rem solid $col-Gray;
             // }
-           
+
             font: normal normal normal 2rem/2.5rem Mulish;
             letter-spacing: 0px;
             color: $col-black;
             padding: 2.4rem;
 
 
-            span  {
+            span {
                 float: right;
                 font: normal normal normal 1.4rem/2.1rem Mulish;
-                
-               
+
+
             }
-            
+
 
         }
-        img{
-            
-           
-           padding-top: 2.5rem;
-            
+
+        img {
+
+
+            padding-top: 2.5rem;
+
         }
     }
 
     .btn {
 
-        padding-top: 5.5rem ;
+        padding-top: 5.5rem;
 
         .btn-sub {
             width: 3.2rem;
@@ -114,13 +122,15 @@
         letter-spacing: 0px;
         color: $col-black;
         padding: .3rem 1rem;
-        span{
+
+        span {
             padding-left: .6rem;
         }
-        img{
-            width:1rem;
+
+        img {
+            width: 1rem;
             height: 1rem;
-           
+
         }
     }
 
@@ -165,7 +175,8 @@
             border: none;
             padding: 1.4rem 8.3rem 1.4rem 8.3rem;
         }
-        .ppbtn{
+
+        .ppbtn {
             padding: 1rem;
         }
 
@@ -173,21 +184,28 @@
 
 
 }
-@media (min-width: 320px) and (max-width: 767px){
-    .cart-Container .btn{
+
+@media (min-width: 320px) and (max-width: 767px) {
+    .cart-Container .btn {
         padding-top: 0;
     }
-    .cart-Container .pricing-total{
-        border:none;
-    }
-    
 
-.cart-Container .shipping p span{
-    float: left;
-    padding-top: 0;
-    padding-bottom: .5rem;
-}
-.cart-Container .shipping p{
-    padding: 1.4rem;
-}
+    .cart-Container .pricing-total {
+        border: none;
+    }
+
+    .cart-Container .shipping p span {
+        float: left;
+        padding-top: 0;
+        padding-bottom: .5rem;
+    }
+
+    .cart-Container .shipping p {
+        padding: 1.4rem;
+    }
+
+    .cart-Container .cart-products .added-product img {
+        width: 40vw;
+        height: 19.9rem;
+    }
 }
