--- a/src/Scss/index.css
+++ b/src/Scss/index.css
@@ -5775,6 +5775,12 @@ nav .hamburger {
 .cart-Container {
   padding: 1rem;
 }
+.cart-Container .carousal {
+  font: normal normal 600 4.8rem/6rem Source Serif Pro;
+  letter-spacing: 0px;
+  color: #172026;
+  padding: 2rem;
+}
 .cart-Container h1 {
   font: normal normal 600 4.8rem/4.5rem Source Serif Pro;
   letter-spacing: 0px;
@@ -5796,7 +5802,7 @@ nav .hamburger {
   display: flex;
 }
 .cart-Container .cart-products .added-product img {
-  width: 12vw;
+  width: 13vw;
   height: 19.9rem;
   border: 0.1rem solid #D1D3D6;
 }
@@ -5915,6 +5921,10 @@ nav .hamburger {
   }
   .cart-Container .shipping p {
     padding: 1.4rem;
+  }
+  .cart-Container .cart-products .added-product img {
+    width: 40vw;
+    height: 19.9rem;
   }
 }
 * {
